--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,6 @@ plugins {
 android {
     namespace 'com.example.doan'
     compileSdk 35
-
-//    implementation 'de.hdodenhof:circleimageview:3.1.0'
-
     defaultConfig {
         applicationId "com.example.doan"
         minSdk 24
@@ -40,6 +37,7 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation "androidx.navigation:navigation-fragment:2.7.2"
     implementation "androidx.navigation:navigation-ui:2.7.2"
