--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,19 @@
         android:theme="@style/Theme.Doan"
         tools:targetApi="31">
         <activity
+            android:name=".OrderTrackingActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
         <activity
             android:name=".AccountSettingsActivity"
-            android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".SearchActivity"-->
-<!--            android:exported="false" />-->
-<!--        <activity-->
-<!--            android:name=".ProfileActivity"-->
-<!--            android:exported="false" /> -->
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".SearchActivity" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity -->
+        <!-- android:name=".ProfileActivity" -->
+        <!-- android:exported="false" /> -->
         <!-- <activity -->
         <!-- android:name=".activityProfile" -->
         <!-- android:exported="false" /> -->
