--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     androidTestImplementation libs.espresso.core
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+    implementation 'com.google.android.material:material:1.11.0' // hoặc version mới nhất
 
     implementation 'com.google.android.material:material:1.12.0'
     implementation "androidx.navigation:navigation-fragment:2.7.2"
