SignUp bằng FireBase

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,13 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+
+    // ✅ THÊM ĐOẠN NÀY để plugin Firebase hoạt động
+    plugins {
+        id("com.google.gms.google-services") version "4.4.0"
+    }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
