--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     alias(libs.plugins.android.application)
+    id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -46,5 +48,7 @@ dependencies {
     implementation ("com.squareup.picasso:picasso:2.71828")
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.firebase:firebase-auth:22.3.1'
+
 
 }
