--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,9 @@ dependencies {
     implementation ("com.squareup.picasso:picasso:2.71828")
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'com.google.firebase:firebase-auth:22.3.1'
+    implementation 'com.google.firebase:firebase-core:20.1.0'
 
 
 }
