--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,18 @@ dependencies {
     implementation libs.credentials
     implementation libs.credentials.play.services.auth
     implementation libs.googleid
+    implementation libs.play.services.maps
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    implementation 'com.google.firebase:firebase-firestore:24.10.1'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.android.libraries.places:places:3.3.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+
 
     implementation 'com.google.android.material:material:1.12.0'
     implementation "androidx.navigation:navigation-fragment:2.7.2"
