--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
+
+        <activity android:name=".Screens.ProductDetailActivity"
+            android:exported="false" />
         <activity
             android:name=".AccountSettingsActivity"
             android:exported="false" />
