--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.doan"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Doan"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
             android:name=".AccountSettingsActivity"
@@ -24,10 +25,16 @@
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".activityProfile"
+            android:name=".Screens.MyCartActivity"
+            android:theme="@style/AppTheme"
             android:exported="false" />
         <activity
-            android:name=".Adapter.CategoryAdapter"
+            android:name=".Screens.ProductDetailActivity"
+            android:theme="@style/AppTheme"
+            android:exported="false" />
+        <activity
+            android:name=".SeeAllShoesActivity"
+            android:theme="@style/AppTheme"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
