--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,18 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBKSIF64u1FBEjpI0HxVSvc3BvYChbe0nE" />
 
+<!--        <activity-->
+<!--            android:name=".Screens.PaymentActivity"-->
+<!--            android:exported="true"-->
+<!--            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"-->
+<!--            android:windowSoftInputMode="adjustPan">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
 
         <activity
             android:name=".Auth.SignInActivity"
@@ -47,17 +59,7 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".Screens.PaymentActivity"
-            android:exported="true"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
-            android:windowSoftInputMode="adjustPan">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
         <activity
             android:name=".Screens.AddressActivity"
