--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 
     // Networking and image
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'com.google.android.material:material:1.11.0'
+
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
