--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBKSIF64u1FBEjpI0HxVSvc3BvYChbe0nE" />
 
+<!--        <activity android:name="com.momo.momo_partner.AppMoMoLibActivity" />-->
+<!--        <intent-filter>-->
+<!--            <data android:scheme="momo4u20220120" /> &lt;!&ndash; dùng appScheme từ MoMo &ndash;&gt;-->
+<!--        </intent-filter>-->
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
