--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:2.7.2"
     implementation "androidx.navigation:navigation-ui:2.7.2"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+    implementation 'com.google.firebase:firebase-firestore:24.9.1'
+
 }
 apply plugin: 'com.google.gms.google-services' // Ở cuối file
