--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:2.7.2"
     implementation "androidx.navigation:navigation-ui:2.7.2"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.gms:google-services:4.3.15'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    implementation 'androidx.core:core:1.10.1'
+
 }
