--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,6 @@ dependencies {
     implementation 'com.google.gms:google-services:4.3.15'
     implementation 'com.google.firebase:firebase-messaging:23.0.0'
     implementation 'androidx.core:core:1.10.1'
-
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 }
